# bb-run

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
bbrun/: __init__.py  __main__.py  artifacts.py  cli.py  docker.py  errors.py  host.py  pipeline.py  validator.py
tests/: __init__.py  test_artifacts.py  test_cli.py  test_docker.py  test_errors.py  test_host.py  test_parallel.py  test_target_resolution.py  test_validator.py
