[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-run"
version = "0.1.0"
description = "Run Bitbucket Pipelines locally"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Karl Hill", email = "karlhillx@gmail.com" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# pytest-cov registers --cov / --cov-report (needed for CI and coverage runs)
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/karlhillx/bb-run"

[project.scripts]
bb-run = "bbrun.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
bbrun = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
